# Finmaxxin

./: .env.example  .gitignore  Engmaxxin.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/models/: __init__.py  contracts.py
backend/app/services/: advisor_prompt.py  advisory_orchestrator.py  advisory_validation.py  data_provider.py  fallback_advisor.py  llm_client.py  market_data.py  simulation.py  storage.py  transparency.py
backend/tests/: test_advisory_services.py  test_api.py  test_market_data_service.py
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
nginx/: default.conf
